--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 
 image.path=/home/wulei/exp-temp
+#image.path=/Users/wulei/exp-temp
 
 dewarp.heartbeat=http://59.67.77.90:7777/heartbeat
 dewarp.run=http://59.67.77.90:7777/run
